--- a/styles/allevents.css
+++ b/styles/allevents.css
@@ -4,23 +4,31 @@
   &__banner {
     @apply absolute h-48 w-full bg-primary lg:h-96;
   }
-  &__animate-bounce-slow1 {
-    @apply absolute -left-40 -top-[74px] z-10 h-52 w-52 rounded-full  bg-secondary3 md:-left-80 md:top-4 md:min-h-[432px] md:w-[432px] lg:-left-80 lg:top-20 lg:min-h-[450px] lg:w-[503px] xl:!-left-28 xl:!top-44 xl:min-h-[450px] xl:w-[450px];
-  }
-  &__animate-bounce-slow2 {
-    @apply absolute -right-40 top-44 z-10 h-52 w-52 rounded-full bg-secondary2 md:-right-52 md:top-56 md:min-h-[345px] md:w-[373px] lg:-right-96 lg:top-40 lg:min-h-[450px] lg:w-[503px] xl:-right-28 xl:top-44 xl:min-h-[450px] xl:w-[450px];
-  }
 
   &__page {
-    @apply overflow-hidden bg-neutral-100 px-container pt-28 md:pt-32 ;
+    @apply relative overflow-hidden bg-neutral-100 px-md-container pt-28 md:pt-32;
   }
+
+  &__background {
+    @apply relative;
+
+    &::before {
+      content: '';
+      @apply absolute left-0 top-0 z-10 aspect-square w-1/3 -translate-x-2/3  rounded-full bg-secondary3;
+    }
+    &::after {
+      content: '';
+      @apply absolute right-0 top-0 z-10 aspect-square w-1/3 translate-x-2/3 translate-y-[70%] rounded-full bg-secondary2;
+    }
+  }
+
   &__image {
-    @apply relative z-20 aspect-video m-auto overflow-hidden rounded-2xl pt-5 md:max-h-[550px];
+    @apply relative z-20 m-auto aspect-video overflow-hidden rounded-2xl pt-5 md:max-h-[550px];
   }
 
   &__body {
-    @apply flex gap-10 lg:gap-32 flex-wrap
-    /* @apply mx-auto flex flex-col flex-wrap overflow-hidden md:flex-col md:py-4 lg:flex-row lg:items-baseline lg:justify-center lg:gap-32 lg:py-10; */
+    @apply /* @apply lg:py-10; */
+    mx-auto flex flex-col flex-wrap gap-10 overflow-hidden md:flex-col md:py-4 lg:flex-row lg:items-baseline lg:justify-center lg:gap-32 lg:gap-32;
   }
   &__header {
     @apply m-0 mb-6 flex-col items-start justify-start  text-center uppercase lg:items-center;
@@ -33,13 +41,13 @@
   }
 
   &__datails {
-    @apply !mb-16 md:mb-20 lg:mb-32 flex-1;
+    @apply !mb-16 flex-1 md:mb-20 lg:mb-32;
   }
   &__title {
     @apply flex flex-row justify-start gap-4 whitespace-nowrap font-bold text-neutral-800 md:items-center;
   }
   &__tools {
-    @apply mb-5 flex gap-4 justify-between flex-1;
+    @apply mb-5 flex flex-1 justify-between gap-4;
   }
   &__svg {
     @apply flex flex-row items-center gap-2 pb-4 md:p-0;
@@ -62,6 +70,6 @@
     @apply px-10 py-5 text-center uppercase md:w-72 md:py-6;
   }
   &__paragraph {
-    @apply mx-auto mb-6 flex items-start flex-col gap-2 md:pb-36 px-4 md:px-0;
+    @apply mx-auto mb-6 flex flex-col items-start gap-2 px-4 md:px-0 md:pb-36;
   }
 }
