--- a/styles/globals.css
+++ b/styles/globals.css
@@ -172,7 +172,7 @@
       }
     }
     & > div:last-child {
-      @apply overflow-hidden border-none py-4 text-left text-base pl-16;
+      @apply overflow-hidden border-none py-4 pl-16 text-left text-base;
     }
   }
 
@@ -606,7 +606,7 @@
   }
 
   .form {
-    @apply flex flex-col w-full gap-4 md:grid md:grid-cols-2;
+    @apply flex w-full flex-col gap-4 md:grid md:grid-cols-2;
 
     &__group {
       &__label {
